<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:enabled="true"
        android:key="@string/keynotifycheck"
        android:summary="@string/notify_check_summ"
        android:summaryOff="Notifcations Off"
        android:summaryOn="Notifcations On"
        android:title="@string/notificationsCheckBox" android:defaultValue="true"/>

    <EditTextPreference
        android:defaultValue="keyfiltercheck"
        android:key="@string/keyfilteredit"
        android:negativeButtonText="@string/cancel"
        android:positiveButtonText="@string/ok"
        android:summary="@string/desc_filter_edit"
        android:title="@string/title_filter_edit" />

    <ListPreference
        android:defaultValue="http://paging1.sacfs.org/live/"
        android:entries="@array/settings_feed_key"
        android:entryValues="@array/settings_feed_value"
        android:key="@string/keyselectfeed"
        android:summary="@string/desc_select_feed"
        android:title="@string/title_select_feed" />

</PreferenceScreen>